# ai-models-comparison-testing

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ai-qa-tests.yml
data/: sentiment_dataset.json
tests/: config.py  conftest.py  helpers.py  test_advanced.py  test_anthropic.py  test_auth.py  test_basic.py  test_edge_cases.py  test_error_handling.py  test_hallucinations.py  test_metrics.py  test_monitoring.py  test_production_readiness.py
