[project]
name = "ai-models-comparison-testing"
version = "1.0.0"
description = "Test framework for evaluating AI model behavior across OpenAI and Anthropic APIs"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E501"]
exclude = [".venv", "venv", "__pycache__"]